Don't destroy ListModel child list nodes. These are owned by the root and must not be destroyed by child lists.

Task-number: QTBUG-12771
Reviewed-by: Bea Lam